--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ pandas==2.3.1
 djangorestframework==3.16.0
 django-cors-headers==4.7.0
 django-filter==25.1
+django-csp==3.7
 gunicorn==23.0.0
 whitenoise==6.9.0
 
