📊 ENHANCE: Add comprehensive meta-analysis metrics to forest plot tooltips
✅ ADVANCED META-ANALYSIS TOOLTIP:
- I² statistic for heterogeneity assessment
- τ² (tau-squared) for between-study variance
- Q statistic with p-value for heterogeneity test
- Random-effects pooled estimates (DerSimonian-Laird)
- 95% Prediction intervals for future studies
- Total sample size across all studies
- Number of studies included

🔬 PROPER STATISTICAL METHODS:
- Inverse variance weighting for pooling
- Fixed-effects vs random-effects estimates
- Chi-square test for heterogeneity significance
- Publication-quality meta-analysis metrics

📋 DEPENDENCIES:
- Added scipy>=1.11.0 for statistical distributions

Now pooled diamonds show comprehensive meta-analysis information! 🎯

--- a/requirements.txt
+++ b/requirements.txt
@@ -17,4 +17,5 @@ django-debug-toolbar==4.4.6
 
 # For plotting and charts (optional, for statistics)
 plotly==5.24.1
-matplotlib>=3.9.0 
+matplotlib>=3.9.0
+scipy>=1.11.0 
